# dotgents

./: .gitignore  AGENTS.md  IMPLEMENTATION.md  README.md  agent-scaffold-plan.md  pyproject.toml
.github/instructions/: git.instructions.md
.github/workflows/: release.yml  test.yml
docs/: cli-reference.md  index.md  installation.md  introduction.md  manifest-configuration.md  project-structure.md  quick-start.md
docs/guides/: creating-agents.md  managing-instructions.md  working-with-skills.md
src/agent_scaffold/: __init__.py  cli.py  manifest.py  models.py  templates.py  utils.py
src/agent_scaffold/commands/: __init__.py  add.py  doctor.py  init.py  sync.py
src/agent_scaffold/generators/: __init__.py  base.py  copilot.py  opencode.py
src/agent_scaffold/templates/copilot/: agent.md.j2  copilot-instructions.md.j2  instruction.md.j2  prompt.md.j2  skill.md.j2
src/agent_scaffold/templates/opencode/: AGENTS.md.j2  opencode.json.j2
tests/: __init__.py  conftest.py  test_commands.py  test_generators.py  test_manifest.py  test_models.py
