[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-scaffold"
version = "0.1.0"
description = "Multi-agent scaffold for AI coding assistants"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Agent Scaffold Contributors" }
]
keywords = ["ai", "agents", "copilot", "opencode", "scaffold", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
agent-scaffold = "agent_scaffold.cli:main"

[project.urls]
Homepage = "https://github.com/anomalyco/agent-scaffold"
Documentation = "https://github.com/anomalyco/agent-scaffold#readme"
Repository = "https://github.com/anomalyco/agent-scaffold"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_scaffold"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/agent_scaffold"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
